--- a/news.txt
+++ b/news.txt
@@ -1,2 +1,2 @@
 
-สวัสดีดครับ ยินดีต้อนรับทุกคนนะครับ
+สวัสดีดครับ ยินดีต้อนรับทุกคนนะครับ ตอนนี้แอปอยู่ในช่วงเทสระบบ ขอบคุณทุกคนที่ร่วมมือและช่วยเทสระบบนะครับ
